2018-10-24  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* configure.ac (AC_PREREQ): Require Autoconf >= 2.63.
	* doc/configure.ac (AC_PREREQ): Likewise.
	* lib/configure.ac (AC_PREREQ): Likewise.
	* src/configure.ac (AC_PREREQ): Likewise.
	* tests/configure.ac (AC_PREREQ): Likewise.
	* autogen.sh: Update comment.

2018-09-16  Bruno Haible  <bruno@clisp.org>

	Fix "Unescaped left brace in regex" warnings from Perl 5.26.
	Reported and patch by Jehan <jehan@girinstud.io> <jehan@zemarmot.net> at
	<https://savannah.gnu.org/bugs/?54088>.
	* doc/texi2html: Escape braces in regular expressions.

2018-09-14  Bruno Haible  <bruno@clisp.org>

	doc: Assume texinfo 4.0 or newer.
	* doc/gperf.texi: Omit Next, Prev, Up fields from @node lines.

2018-09-08  Bruno Haible  <bruno@clisp.org>

	Avoid "implicit fallthrough" warnings also from clang.
	Reported by Nico Weber <thakis@chromium.org> in
	<https://savannah.gnu.org/bugs/?53029>.
	Clang emits these warnings in C++11 mode only, see
	<https://clang.llvm.org/docs/AttributeReference.html#fallthrough>,
	and only in clang 3.9 or newer, see
	<https://releases.llvm.org/3.9.0/tools/clang/docs/ReleaseNotes.html>.
	To avoid them, either [[fallthrough]] or the (nearly equivalent) older
	[[clang::fallthrough]] can be used, see
	<https://llvm.org/viewvc/llvm-project?view=revision&revision=262881>.
	* src/output.cc (Output::output_hash_function): Enhance the fallthrough
	marker.
	* tests/*.exp: Update.

2018-09-08  Bruno Haible  <bruno@clisp.org>

	Fix failure of "make check -j2".
	Reported and fix provided by Bernhard M. Wiedemann in
	<https://savannah.gnu.org/bugs/?53208>.
	* tests/Makefile.in (check-test): Depend on 'check-ada'.

2018-09-08  Bruno Haible  <bruno@clisp.org>

	Don't print uninitialized hash values in debug mode.
	Reported by Frank Wojcik <frankw@touristinresidence.com> in
	<https://savannah.gnu.org/patch/?9560>.
	* src/output.cc (output_keyword_entry): Add an 'is_duplicate' argument.