@@ -4,7 +4,7 @@
 SHELL = /bin/sh
 MAKE = make
 
-all : configures src/config.h.in src/config.h_vms
+all : configures src/config.h.in
 
 CONFIGURES = configure lib/configure src/configure tests/configure doc/configure
 
@@ -31,12 +31,9 @@ check-configures : $(CONFIGURES)
 src/config.h.in : src/configure.ac aclocal.m4
 	cd src && autoheader -I .. && rm -rf autom4te.cache
 
-src/config.h_vms : src/config.h.in
-	cp src/config.h.in src/config.h_vms
-
 totally-clean : force
 	rm -f $(CONFIGURES)
-	rm -f src/config.h.in src/config.h_vms
+	rm -f src/config.h.in
 
 force :
 
